--- a/geonode_dominode/cors/templates/cors/map.html
+++ b/geonode_dominode/cors/templates/cors/map.html
@@ -6,10 +6,32 @@
     <link href="{{ STATIC_URL }}cors/js/libs/leaflet.draw/1.0.4/leaflet.draw.css" rel="stylesheet" type="text/css"/>
     <link href="{{ STATIC_URL }}css/dominode_base.css" rel="stylesheet"/>
     <link href="{{ STATIC_URL }}cors/css/map.css" rel="stylesheet"/>
+    <script>
+        const observationDownloadURL = '{% url 'cors-observation-download' 0%} '
+    </script>
 {% endblock extra_head %}
 {% block middle %}
-    <div id="map">
-
+    <div id="map"></div>
+    <div id="side-panel">
+        <div id="content-section" class="section">
+            <table id="feature-properties">
+            </table>
+        </div>
+        <div id="download-section" class="section">
+            <div class="title">Download observation</div>
+            <form id="download-observation" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label>From</label>
+                    <input type="date" class="form-control" name="from" required>
+                </div>
+                <div class="form-group">
+                    <label>To</label>
+                    <input type="date" class="form-control" name="to" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Download</button>
+            </form>
+        </div>
     </div>
 {% endblock %}
 {% block extra_script %}
