--- a/geonode_dominode/geonode_dominode/templates/site_base.html
+++ b/geonode_dominode/geonode_dominode/templates/site_base.html
@@ -92,6 +92,9 @@
                             <li><a href="{% url "recent-activity" %}">{% trans "Recent Activity" %}</a></li>
                             {% if FAVORITE_ENABLED and user.is_authenticated %}
                             <li><a href="{% url "favorite_list" %}">{% trans "Favorites" %}</a></li>
+                            <li id="nav_dominode_resources">
+                                <a href="{% url 'dominode-resource-list' %}">{% trans "Validated Resources" %}</a>
+                            </li>
                             {% endif %}
                             <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
                             {% if user.is_superuser or user.is_staff %}
