Adding UI for validation reports and DomiNode resources

--- a/geonode_dominode/dominode_validation/templates/dominode_validation/dominoderesource_detail.html
+++ b/geonode_dominode/dominode_validation/templates/dominode_validation/dominoderesource_detail.html
@@ -7,28 +7,31 @@
         <h2 class="page-title">{{ resource.name }} <small>DomiNode resource</small></h2>
     </div>
     <div class="list-group">
-        <a class="list-group-item {% if resource.is_valid %}list-group-item-success{% else %}list-group-item-danger{% endif %}">Valid: {{ resource.is_valid }}</a>
-        <a class="list-group-item">Type: {{ resource.resource_type }}</a>
+        <a class="list-group-item {% if resource.is_valid %}list-group-item-success{% else %}list-group-item-danger{% endif %}"><strong>{% trans "Valid" %}:</strong> {{ resource.is_valid }}</a>
+        <a class="list-group-item"><strong>{% trans "Artifact Type" %}:</strong> {{ resource.artifact_type|capfirst }}</a>
+        <a class="list-group-item"><strong>{% trans "Resource Type" %}:</strong> {{ resource.resource_type|capfirst }}</a>
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">
             <h3 class="panel-title">Latest Validation Report</h3>
         </div>
         <div class="panel-body">
-            <p>{% trans "Validator" %}: {{ latest_report.validator.username }}</p>
-            <p>{% trans "Validated at" %}: {{ latest_report.created }}</p>
-            {{ latest_report.report }}
+            {% include "./_validation_report.html" with report=latest_report only %}
         </div>
     </div>
-    <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">{% trans "Other recent validation reports" %}</h3>
+    {% if other_recent_reports|length > 0 %}
+        <div class="panel panel-default">
+            <div class="panel-heading clearfix">
+                {% if show_all_reports %}
+                    <a  class="btn btn-default pull-right" href="{%  url 'validation-report-list' resource.pk %}">{% trans "See all reports" %}</a>
+                {% endif %}
+                <h3 class="panel-title">{% trans "Other recent validation reports" %}</h3>
+            </div>
+            <div class="list-group">
+                {% for report in other_recent_reports %}
+                    <a class="list-group-item" href="{% url 'validation-report-detail' report.pk %}">{{ report.created }} - {{ report.validator }}</a>
+                {% endfor %}
+            </div>
         </div>
-        <div class="list-group">
-            {% for report in other_recent_reports %}
-                <a class="list-group-item" href="{% url 'validation-report-detail' report.pk %}">{{ report.created }} - {{ report.validator }}</a>
-            {% endfor %}
-            <a  class="list-group-item" href="{%  url 'validation-report-list' resource.pk %}">See all</a>
-        </div>
-    </div>
+    {% endif %}
 {% endblock %}
