--- a/geonode_dominode/dominode_validation/templates/dominode_validation/dominoderesource_list.html
+++ b/geonode_dominode/dominode_validation/templates/dominode_validation/dominoderesource_list.html
@@ -5,12 +5,18 @@
     <div class="page-header">
         <h2 class="page-title">{% trans "DomiNode resources" %}</h2>
     </div>
+    <div>
+        <p{% blocktrans %}>
+            These resources have been formally validated by DomiNode departments.
+        {% endblocktrans %}</p>
+    </div>
         <div class="list-group">
             {% for resource in dominode_resources %}
                 <a href="{% url 'dominode-resource-detail' resource.pk %}" class="list-group-item">
                     {{ resource.name }}
                     <span class="pull-right">
                         <span class="label label-default">{{ resource.resource_type }}</span>
+                        <span class="label label-default">{{ resource.artifact_type }}</span>
                         <span class="label {% if resource.is_valid %}label-success{% else %}label-danger{% endif %}">{% if resource.is_valid %}Valid{% else %}Invalid{% endif %}</span>
                     </span>
                 </a>
