--- a/geonode_dominode/dominode_validation/templates/dominode_validation/validationreport_detail.html
+++ b/geonode_dominode/dominode_validation/templates/dominode_validation/validationreport_detail.html
@@ -7,9 +7,7 @@
             <a href="{% url 'validation-report-list' report.resource.pk %}" class="btn btn-primary">{% trans "Back to reports list" %}</a>
             <a href="{% url 'dominode-resource-detail' report.resource.pk %}" class="btn btn-primary">{% trans "Back to resource details" %}</a>
         </div>
-        <h2 class="page-title">{{ report.result }}</h2>
+        <h2 class="page-title">{% trans "Validation report" %} <small>{{ report.resource.name }}</small></h2>
     </div>
-    <ul class="list-group">
-        <li class="list-group-item">{{ report.validator }}</li>
-    </ul>
+    {% include "./_validation_report.html" with report=report only %}
 {% endblock %}
