--- a/geonode_dominode/geonode_dominode/templates/groups/group_detail_override.html
+++ b/geonode_dominode/geonode_dominode/templates/groups/group_detail_override.html
@@ -1,5 +1,6 @@
 {% extends "groups/group_detail.html" %}
 {% load i18n %}
+{% load guardian_tags %}
 
 {% block body_outer %}
 <div class="page-header">
@@ -48,23 +49,24 @@
   <div class="col-md-4">
     <ul class="list-group">
       {% if is_manager %}
-      <li class="list-group-item"><a href="{% url "group_update" object.slug %}">{% trans "Edit Group Details" %}</a></li>
-      <li class="list-group-item"><a href="{% url "group_members" object.slug %}">{% trans "Manage Group Members" %}</a></li>
-      <li class="list-group-item"><a href="{% url "group_remove" object.slug %}">{% trans "Delete this Group" %}</a></li>
+          <li class="list-group-item"><a href="{% url "group_update" object.slug %}">{% trans "Edit Group Details" %}</a></li>
+          <li class="list-group-item"><a href="{% url "group_members" object.slug %}">{% trans "Manage Group Members" %}</a></li>
+          <li class="list-group-item"><a href="{% url "group_remove" object.slug %}">{% trans "Delete this Group" %}</a></li>
       {% endif %}
       {% if can_view %}
-      <li class="list-group-item"><a href="{% url "group_activity" object.slug %}">{% trans "Group Activities" %}</a></li>
+          <li class="list-group-item"><a href="{% url "group_activity" object.slug %}">{% trans "Group Activities" %}</a></li>
       {% endif %}
-      {% if perms.groups.can_sync_geoserver %}
-      <li class="list-group-item">
-        <form action="{% url "sync_geoserver" %}" method=post>
-          {% csrf_token %}
-          <input type="hidden" name="group-slug" value="{{ object.slug }}" />
-          <input type="hidden" name="redirect" value="{{ request.path }}" />
-          <input type="submit" class="btn btn-primary" value="{% trans "Sync GeoServer" %}" />
-        </form>
-      </li>
-      {% endif %}
+      {% get_obj_perms request.user for object as "group_profile_perms" %}
+        {% if geoserver_sync_perm_name in group_profile_perms and is_department_group_profile %}
+            <li class="list-group-item">
+                <form action="{% url "sync_geoserver" group_slug=object.slug %}" method=post>
+                    {% csrf_token %}
+                    <input type="hidden" name="group-slug" value="{{ object.slug }}" />
+                    <input type="hidden" name="redirect" value="{{ request.path }}" />
+                    <input type="submit" class="btn btn-primary" value="{% trans "Sync new GeoServer layers" %}" />
+                </form>
+            </li>
+        {% endif %}
       <li class="list-group-item">
         <h4>{% trans "Permissions" %}</h4>
         <p>
