--- a/geonode_dominode/geonode_dominode/templates/site_base.html
+++ b/geonode_dominode/geonode_dominode/templates/site_base.html
@@ -97,15 +97,17 @@
                             </li>
                             {% endif %}
                             <li><a href="{% url "messages_inbox" %}">{% trans "Inbox" %}</a></li>
-                            {% if user.is_superuser or user.is_staff %}
+                            {% if user.is_superuser or user.is_staff or user_is_geoserver_editor%}
                                 <li role="separator" class="divider"></li>
-                                <li><a href="{% url "admin:index" %}">{% trans "Admin" %}</a></li>
-                                {% if 'geonode.geoserver' in INSTALLED_APPS %}
-                                <li><a href="{{ OGC_SERVER.default.WEB_UI_LOCATION }}">GeoServer</a></li>
+                                {% if user.is_superuser or user.is_staff %}
+                                    <li><a href="{% url "admin:index" %}">{% trans "Admin" %}</a></li>
+                                {% endif %}
+                                {% if 'geonode.geoserver' in INSTALLED_APPS and user.is_superuser or user.is_staff or user_is_geoserver_editor %}
+                                    <li><a href="{{ OGC_SERVER.default.WEB_UI_LOCATION }}">GeoServer</a></li>
                                 {% endif %}
                                 {% if USE_MONITORING %}
-                                <li role="separator" class="divider"></li>
-                                <li><a href="{% url "monitoring:index" %}">{% trans "Monitoring & Analytics" %}</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="{% url "monitoring:index" %}">{% trans "Monitoring & Analytics" %}</a></li>
                                 {% endif %}
                             {% endif %}
                             <li role="separator" class="divider"></li>
